Code coverage and sonar fixes
- added web mvc tests to cover controller exception cases
- added webclient tests with full spring support to replace
old style of Invoker
- fixed some sonar issues
- refactored a test still using @RunWith from junit4

Issue-ID: POLICY-5067
Change-Id: I4d3e77c32a603bdfeca4db76f00acf38830ef250
Signed-off-by: adheli.tavares <adheli.tavares@est.tech>